--- a/templates/index.html
+++ b/templates/index.html
@@ -10,6 +10,7 @@
     <div>
       <h1 class="headline">TaggedByBelle</h1>
       <p class="sub">make your beats unforgettable</p>
+      <a class="cta" href="/">Order</a>
     </div>
   </section>
 {% endblock %}
