--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -10,7 +10,7 @@
     <div>
       <h1 class="headline">TaggedByBelle</h1>
       <p class="sub">make your beats unforgettable</p>
-      <a class="cta" href="/">Order</a>
+      <a class="cta" href="/order/new">Order</a>
     </div>
   </section>
 {% endblock %}
